--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=Anujup2660@
-DB_NAME=attendance_db
-PORT=3000
+DB_HOST=http://student-attendance-system-0.cfwiwmgememr.ap-south-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASS=w0OWy6P1Uj1aENRyD2FW
+DB_NAME=student-attendance-system-0
+PORT=3306
