--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=http://student-attendance-system-0.cfwiwmgememr.ap-south-1.rds.amazonaws.com
+DB_HOST=student-attendance-system-0.cfwiwmgememr.ap-south-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASS=w0OWy6P1Uj1aENRyD2FW
 DB_NAME=student-attendance-system-0
-PORT=3306
+DB_PORT=3306
+APP_PORT=3000
