--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=student-attendance-system-1.cfwiwmgememr.ap-south-1.rds.amazonaws.com
 DB_USER=admin
-DB_PASS=ZbaCImWbz5r2C78pzeVl
+DB_PASS=Anujup2660
 DB_NAME=student-attendance-system-1
 DB_PORT=3306
 APP_PORT=3000
